Minor code changes